--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Jerry Wang"
 author: "Jerry Wang"
-description: "Contact me: style=\"color: #f45;\">&lt;3</b>"
+description: "Contact me:"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
